# smartaudio

./: CHANGELOG.md  Cargo.toml  README.md  justfile  release-plz.toml
.github/workflows/: CI.yml
examples/: simple_frame.rs  simple_iter.rs  simple_raw_frame.rs
src/: commands.rs  constants.rs  frames.rs  lib.rs  parser.rs  responses.rs
